[gd_scene load_steps=5 format=3 uid="uid://cny51xptnsdk1"]

[ext_resource type="Script" path="res://control.gd" id="1_1smaw"]
[ext_resource type="Texture2D" uid="uid://bp76scifim2ry" path="res://UI assets/button_atlas.tres" id="2_06vb6"]
[ext_resource type="Texture2D" uid="uid://csly6e7otdvv8" path="res://UI assets/button_pressed.tres" id="3_godu1"]

[sub_resource type="LabelSettings" id="LabelSettings_42lit"]
font_color = Color(0, 0, 0, 1)

[node name="Control" type="CenterContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = -16.0
offset_right = 38.5
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1smaw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="StartButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("2_06vb6")
texture_pressed = ExtResource("3_godu1")
texture_hover = ExtResource("3_godu1")
stretch_mode = 0

[node name="Label" type="Label" parent="VBoxContainer/StartButton"]
layout_mode = 0
offset_left = 2.0
offset_right = 40.0
offset_bottom = 23.0
text = "Start"
label_settings = SubResource("LabelSettings_42lit")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
